[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-scanner-security"
version = "1.0.0"
description = "Language-agnostic Supply Chain Security & Reachability Analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0"
]

[project.scripts]
flux = "flux_scanner.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["flux_scanner*"]
